--- a/assets/sass/partials/_blog.scss
+++ b/assets/sass/partials/_blog.scss
@@ -1,18 +1,18 @@
 // Node: Blog Post
 // -----------------------------------------------------------------------------
-.blog-post {
+.node--blog-post {
   img {
     width: 100%;
     height: auto;
     @include border-radius(2px);
   }
 
-  &--view-mode-teaser {
+  &--view-mode--teaser {
     @extend .margin--sm--top;
     @extend .margin--sm--bottom;
   }
 
-  &--view-mode-featured {
+  &--view-mode--featured {
     @extend .padding--xs--left;
     @extend .padding--xs--right;
   }
