Updated style for event pages

--- a/assets/sass/global/_typography.scss
+++ b/assets/sass/global/_typography.scss
@@ -23,6 +23,11 @@ h4 {
   margin: 0 0 10px;
   line-height: 140%;
 }
+h5 {
+  font-size: 12px;
+  margin: 0 0 10px;
+  line-height: 140%;
+}
 
 // Anchors
 // -----------------------------------------------------------------------------
