--- a/assets/sass/partials/_calendar.scss
+++ b/assets/sass/partials/_calendar.scss
@@ -2,6 +2,7 @@
 // -----------------------------------------------------------------------------
 .calendar-calendar {
   padding: 0;
+  margin-bottom: 40px;
   .month-view {
     table.full {
       tr {
@@ -56,5 +57,13 @@
         }
       }
     }
+  }
+}
+.date-nav-wrapper {
+  h3 {
+    font-size: 24px;
+    line-height: 140%;
+    padding-top: 10px;
+    margin: 0;
   }
 }
