Fixed non-panel pages

--- a/assets/sass/partials/_panel.scss
+++ b/assets/sass/partials/_panel.scss
@@ -1,6 +1,10 @@
 // Styles for panels and panes.
 // -----------------------------------------------------------------------------
 
+.panel-display {
+  padding: 40px 0;
+}
+
 // Panels Modal
 // -----------------------------------------------------------------------------
 .panels-add-content-modal {
