--- a/assets/sass/partials/_slideshow.scss
+++ b/assets/sass/partials/_slideshow.scss
@@ -16,7 +16,7 @@
     color: lighten($brand-primary, 40);
     text-align: center;
     text-shadow: 0px 1px 8px rgba($brand-primary, 0.9);
-    background-color: rgba($brand-primary, 0.95);
+    background-color: rgba(darken($brand-primary, 10), 0.90);
     padding: 30px;
     position: relative;
     @include box-shadow(0 0 5px rgba($brand-primary, 0.9));
