--- a/assets/sass/partials/_view.scss
+++ b/assets/sass/partials/_view.scss
@@ -16,6 +16,12 @@
     text-align: center;
   }
 }
+.front {
+  .view {
+    background: image-url("bg/bg-separator-shadow.png") no-repeat top center;
+    padding-top: 100px;
+  }
+}
 
 // Views Exposed Form.
 // -----------------------------------------------------------------------------
