--- a/assets/sass/partials/_event.scss
+++ b/assets/sass/partials/_event.scss
@@ -1,6 +1,6 @@
 // Event
 // -----------------------------------------------------------------------------
-.node-event {
+.node--event {
   img {
     width: 100%;
     height: auto;
