Update display for menus and events

--- a/assets/sass/partials/_menu.scss
+++ b/assets/sass/partials/_menu.scss
@@ -35,8 +35,9 @@
   .menu__variant {
     margin-top: 8px;
     &__type {
-      font-size: 0.85em;
+      font-size: 1.0em;
       float: left;
+      margin-top: 2px;
     }
     &__price {
       font-weight: 400;
