--- a/assets/sass/partials/_nav.scss
+++ b/assets/sass/partials/_nav.scss
@@ -54,7 +54,7 @@ ul.navbar-nav {
     margin: 15px 0 10px;
     padding: 0 6px;
     @include breakpoint(md) {
-      padding: 9px 0 9px 15px;
+      padding: 9px 0 9px 17px;
       margin: 0;
       &:before {
         content: "\2726";
@@ -63,10 +63,16 @@ ul.navbar-nav {
         position: absolute;
         left: 0;
       }
+      &:first-child {
+        padding-left: 0px;
+        &:before {
+          display: none;
+        }
+      }
     }
     + li {
       @include breakpoint(md) {
-        margin-left: 14px;
+        margin-left: 17px;
       }
     }
   }
