--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -11554,7 +11554,7 @@ ul.navbar-nav > li {
 }
 @media (min-width: 992px) {
   ul.navbar-nav > li {
-    padding: 9px 0 9px 15px;
+    padding: 9px 0 9px 17px;
     margin: 0;
   }
   ul.navbar-nav > li:before {
@@ -11564,10 +11564,16 @@ ul.navbar-nav > li {
     position: absolute;
     left: 0;
   }
+  ul.navbar-nav > li:first-child {
+    padding-left: 0px;
+  }
+  ul.navbar-nav > li:first-child:before {
+    display: none;
+  }
 }
 @media (min-width: 992px) {
   ul.navbar-nav > li + li {
-    margin-left: 14px;
+    margin-left: 17px;
   }
 }
 ul.navbar-nav li a {
